--- a/functions/sum.html
+++ b/functions/sum.html
@@ -69,16 +69,7 @@
           <article id="syntax">
             <p>El método <code>_sum()</code> calcula la suma de los valores de un array.</p>
             <h3>Sintaxis</h3>
-            <p class="syntaxbox">_sum(<em>array</em>)</p>
-            <h3>Parámetros</h3>
-            <dl>
-              <dt>
-                <code class="code-params">array</code>
-              </dt>
-              <dd class="description">
-                El array cuyos valores serán sumados.
-              </dd>
-            </dl>
+            <p class="syntaxbox"><em>array</em>._sum()</p>
             <h3>Valor de retorno</h3>
             <p class="description">
               Devuelve un número.
@@ -91,7 +82,7 @@
             <code class="javascript">
 const numeros= [2, 5, 9, 15];
 
-_sum(numeros);
+numeros._sum();
               
 >> 31             
             </code>
